error in HTML that was stopping squares from aligning

--- a/styles.css
+++ b/styles.css
@@ -90,22 +90,23 @@ button {
 .container-2 {
     background-color: white;
     display: flex;
+    flex: 1;
     flex-direction: column;
-    font-size: 36px;
-    font-weight: bolder;
-    text-align: center;
+}
+.child-4 {
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .squares {
     display: flex;
-    flex-flow: row nowrap;
-    flex: 1 1 20%;
-    font-size: 18px;
-    font-weight: 100;
-    text-align: center;
+    flex: 1;
+    flex-direction: column;
 }
 
 .square {
-    display: flex;
-    flex-flow: row nowrap;
+    height: 200px;
+    width: 200px;
+    margin: 20px;
+    background-color: #1f2937;
 }
